--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start": "next start",
     "lint": "next lint",
     "test": "jest --watch",
-    "test:ci": "jest --ci"
+    "test:ci": "jest --ci",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "next": "12.3.0",
@@ -20,6 +22,13 @@
     "@babel/core": "^7.21.4",
     "@babel/preset-env": "^7.21.4",
     "@babel/preset-typescript": "^7.21.4",
+    "@storybook/addon-essentials": "7.0.10",
+    "@storybook/addon-interactions": "7.0.10",
+    "@storybook/addon-links": "7.0.10",
+    "@storybook/blocks": "7.0.10",
+    "@storybook/nextjs": "7.0.10",
+    "@storybook/react": "7.0.10",
+    "@storybook/testing-library": "0.0.14-next.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@types/jest": "^29.5.0",
@@ -30,8 +39,10 @@
     "babel-jest": "^29.5.0",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
+    "eslint-plugin-storybook": "^0.6.12",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
+    "storybook": "7.0.10",
     "ts-jest": "^29.1.0",
     "typescript": "5.0.4"
   }
