--- a/package.json
+++ b/package.json
@@ -16,21 +16,20 @@
     "next": "12.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "styled-components": "^5.3.9",
-    "@storybook/addon-essentials": "7.0.10",
-    "@storybook/addon-interactions": "7.0.10",
-    "@storybook/addon-links": "7.0.10",
-    "@storybook/blocks": "7.0.10",
-    "@storybook/nextjs": "7.0.10",
-    "@storybook/addon-knobs": "^7.0.2",
-    "@storybook/react": "7.0.10",
-    "@storybook/testing-library": "0.0.14-next.2"
+    "styled-components": "^5.3.9"
   },
   "devDependencies": {
     "@babel/core": "^7.21.4",
     "@babel/preset-env": "^7.21.4",
     "@babel/preset-typescript": "^7.21.4",
-    
+    "@storybook/addon-essentials": "7.0.10",
+    "@storybook/addon-interactions": "7.0.10",
+    "@storybook/addon-links": "7.0.10",
+    "@storybook/addon-knobs": "^7.0.2",
+    "@storybook/blocks": "7.0.10",
+    "@storybook/nextjs": "7.0.10",
+    "@storybook/react": "7.0.10",
+    "@storybook/testing-library": "0.0.14-next.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@types/jest": "^29.5.0",
