--- a/package.json
+++ b/package.json
@@ -24,12 +24,13 @@
     "@babel/preset-typescript": "^7.21.4",
     "@storybook/addon-essentials": "7.0.10",
     "@storybook/addon-interactions": "7.0.10",
-    "@storybook/addon-links": "7.0.10",
     "@storybook/addon-knobs": "^7.0.2",
+    "@storybook/addon-links": "7.0.10",
     "@storybook/blocks": "7.0.10",
     "@storybook/nextjs": "7.0.10",
     "@storybook/react": "7.0.10",
     "@storybook/testing-library": "0.0.14-next.2",
+    "@svgr/webpack": "^8.0.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@types/jest": "^29.5.0",
