--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,6 @@
     "jsx": "preserve",
     "incremental": true
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx","jest.setup.js"],
+  "include": ["global.d.ts","next-env.d.ts", "**/*.ts", "**/*.tsx","jest.setup.js"],
   "exclude": ["node_modules"]
 }
