--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "12.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "recoil-persist": "^5.1.0",
     "styled-components": "^5.3.9"
   },
   "devDependencies": {
