--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "recoil-persist": "^5.1.0",
-    "styled-components": "^5.3.9"
+    "styled-components": "^5.3.9",
+    "swiper": "^10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.21.4",
