--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "12.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.46.1",
     "recoil-persist": "^5.1.0",
     "styled-components": "^5.3.9"
   },
