--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.46.1",
+    "react-icons": "^4.12.0",
     "react-intersection-observer": "^9.5.3",
     "react-query": "^3.39.3",
     "react-spinners": "^0.13.8",
