--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@fullcalendar/timegrid": "^6.1.8",
     "axios": "^1.4.0",
     "next": "12.3.0",
+    "query-string": "^8.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.46.1",
