--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@fullcalendar/interaction": "^6.1.8",
     "@fullcalendar/react": "^6.1.8",
     "@fullcalendar/timegrid": "^6.1.8",
+    "@stomp/stompjs": "^7.0.0",
     "axios": "^1.4.0",
     "next": "12.3.0",
     "query-string": "^8.1.0",
@@ -50,6 +51,7 @@
     "@types/node": "18.15.11",
     "@types/react": "18.0.35",
     "@types/react-dom": "18.0.11",
+    "@types/sockjs-client": "^1.5.4",
     "@types/styled-components": "^5.1.26",
     "babel-jest": "^29.5.0",
     "eslint": "8.38.0",
