feat: 로컬 https 환경 적용을 위한 server.js 구현, package.json 스크립트 추가

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "test": "jest --watch",
     "test:ci": "jest --ci",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "dev:https": "node server.js"
   },
   "dependencies": {
     "@fullcalendar/common": "^5.11.5",
