--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-intersection-observer": "^9.5.3",
     "react-query": "^3.39.3",
     "react-spinners": "^0.13.8",
+    "recoil": "^0.7.7",
     "recoil-persist": "^5.1.0",
     "styled-components": "^5.3.9",
     "swiper": "^10.2.0"
