--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "@fullcalendar/timegrid": "^6.1.8",
     "@stomp/stompjs": "^7.0.0",
     "axios": "^1.4.0",
+    "date-fns": "^3.6.0",
     "next": "12.3.0",
     "query-string": "^8.1.0",
     "react": "18.2.0",
+    "react-datepicker": "^6.6.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.46.1",
     "react-icons": "^4.12.0",
@@ -51,6 +53,7 @@
     "@types/jest": "^29.5.0",
     "@types/node": "18.15.11",
     "@types/react": "18.0.35",
+    "@types/react-datepicker": "^6.2.0",
     "@types/react-dom": "18.0.11",
     "@types/sockjs-client": "^1.5.4",
     "@types/styled-components": "^5.1.26",
